--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ny_api?serverTimezone=UTC
     username: root
-    password: zzj0806
+    password: xxxxx
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
@@ -19,7 +19,7 @@ spring:
     port: 6379
     host: xxxxx
     database: 4
-    password: "0806"
+    password: "xxxxx"
 server:
   port: 7529
   servlet:
@@ -33,3 +33,7 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+nyapi:
+  client:
+    secret-key: nianyan
+    access-key: qwertyuiop
