--- a/NyApi-interface/src/main/resources/application.yml
+++ b/NyApi-interface/src/main/resources/application.yml
@@ -2,4 +2,18 @@ server:
   port: 8123
   servlet:
     context-path: /api
+nyapi:
+  client:
+    access-key: x
+    secret-key: x
 
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/ny_api?serverTimezone=UTC
+    username: root
+    password: x
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: false
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
