--- a/NyApi-interface/src/main/resources/application.yml
+++ b/NyApi-interface/src/main/resources/application.yml
@@ -4,15 +4,8 @@ server:
     context-path: /api
 nyapi:
   client:
-    access-key: x
-    secret-key: x
-
-spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ny_api?serverTimezone=UTC
-    username: root
-    password: x
+    access-key: xxxxx
+    secret-key: xxxxx
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
